--- a/frontend/src/app/components/login-page/login-page.component.html
+++ b/frontend/src/app/components/login-page/login-page.component.html
@@ -13,11 +13,15 @@
 
             <p>
                 <p>
-                    <button type="submit">Login</button>
+                    <button type="submit" >Login</button>
                 </p>
-
-
     </form>
+    <!-- <h1>testing list by username</h1>
+    <form (ngSubmit)="getUserbyID()">
+
+        <button type="submit">test</button>
+    </form> -->
+   
 
  
 
