auth services next are going to skipped, no time to figure them out

--- a/frontend/src/app/view-listing/view-listing.component.html
+++ b/frontend/src/app/view-listing/view-listing.component.html
@@ -1,5 +1,7 @@
 <p>view-listing works!</p>
-
+<script>
+    console.log(localStorage.getItem(loginKeyAdmin))
+</script>
 <button (click)="getListing()">get listing to console</button>
 
 <h1>All listings</h1>
