done! just have to add the angular materials

--- a/frontend/src/app/components/login-page/login-page.component.html
+++ b/frontend/src/app/components/login-page/login-page.component.html
@@ -16,6 +16,7 @@
                     <button type="submit"  >Login</button>
                 </p>
     </form>
+    <p><a [routerLink]="['/signup']">Signup here!</a></p>
    
 
  
