--- a/frontend/src/app/components/view-bookings/view-bookings.component.html
+++ b/frontend/src/app/components/view-bookings/view-bookings.component.html
@@ -1,5 +1,6 @@
 <p>view-bookings works!</p>
-<h1>Customer booking here!</h1>
+<h1>booking List here!</h1>
+<h3>Welcome {{LoginName}}</h3>
 <h2>All bookings bellow</h2>
 
 <div *ngFor="let list of BookingOutput | async" >
