--- a/frontend/src/app/components/create-booking/create-booking.component.html
+++ b/frontend/src/app/components/create-booking/create-booking.component.html
@@ -2,6 +2,9 @@
 
 <h1>All Listings</h1>
 <h2>Click the button below to book</h2>
+<p><a [routerLink]="['/viewbook']" [queryParams]="{name: LoginName}">Click Here to view all bookings</a></p>
+<p><a [routerLink]="['/search']" [queryParams]="{name: LoginName}">Click Here to search Listings</a></p>
+
 <h3>Welcome {{LoginName}}</h3>
 
 <div *ngFor="let list of ListingsOutput | async">
@@ -16,25 +19,21 @@
     <p>postal_code: {{list.postal_code}}</p>
     <p><b>Book this location!</b></p>
     <form [formGroup]="bookingform" (ngSubmit)="onSubmit(list)">
-        <!-- <p>
-        <label for="listing_id">Listing ID number </label>
-        <input type="text" id="listing_id" name="listing_id" formControlName="listing_id">
-    </p> -->
+
         <p>
         <label for="booking_id">Booking ID number </label>
         <input type="text" id="booking_id" name="booking_id" formControlName="booking_id">
     </p><p>
         <label for="booking_start">Booking Start  </label>
-        <input type="date" id="booking_start" name="booking_start" formControlName="booking_start" >
+        <input type="text" id="booking_start" name="booking_start" formControlName="booking_start" >
     </p><p>
         <label for="booking_end">Booking End </label>
-        <input type="date" id="booking_end" name="booking_end" formControlName="booking_end">
+        <input type="text" id="booking_end" name="booking_end" formControlName="booking_end">
     </p>
     <p>
         <button type="submit"  >book!</button>
     </p>
     </form>
-    <button type="button" (click)="testfun(list)">Test</button>
-
     <br>
+    <p id="output"></p>
 </div>
