--- a/frontend/src/app/components/admin-addlistings/admin-addlistings.component.html
+++ b/frontend/src/app/components/admin-addlistings/admin-addlistings.component.html
@@ -1,8 +1,13 @@
-<p>admin-addlistings works!</p>
+<div class="topnav">
+  <p><a class="active" [routerLink]="['/login']">Logout</a></p>
+  <p><a [routerLink]="['/view']" [queryParams]="{name: LoginName}">All Listings</a></p>
+  <p><a [routerLink]="['/search']" [queryParams]="{name: LoginName}">Search Listings</a></p>
+</div>
 
 <h1>add Listing here!</h1>
 <h3>Welcome {{LoginName}}</h3>
-<a [routerLink]="['/view']" [queryParams]="{name: LoginName}">Click Here to view all listings</a>
+
+<mat-card>
 <form [formGroup]="listingForm" (ngSubmit)="onSubmit(listingForm.value)">
     <p>
         <label for="listing_id">Listing ID </label>
@@ -36,9 +41,8 @@
             <label for="email">E-mail </label>
             <input type="text" id="email" name="email" formControlName="email">
           </p>
-    
           <p>
             <button type="submit">Submit Listing</button>
           </p>
-          <p id="output"></p>
     </form>
+  </mat-card>
