--- a/frontend/src/app/components/user-signup/user-signup.component.html
+++ b/frontend/src/app/components/user-signup/user-signup.component.html
@@ -1,5 +1,7 @@
-<h1>user-signup Here!</h1>
 
+
+<mat-card class="entry">
+  <h1>user-signup Here!</h1>
 <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
 <p>
     <label for="user_Name">UserName </label>
@@ -33,4 +35,9 @@
       <p>
         <button type="submit">Join up</button>
       </p>
+      <p>{{response}}</p>
 </form>
+</mat-card>
+<mat-card class="entry">
+  <h2><p><a [routerLink]="['/login']" >Back to Login</a></p></h2>
+</mat-card>
