--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.topnav {
+    overflow: hidden;
+    background-color: #4527a0;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #b388ff;
+    color: black;
+  }
+  
+  .topnav a.active {
+      
+    background-color:  #b388ff;
+    color: white;
+  }
+
+.entry{
+    background-color: whitesmoke ; 
+    width: 45%;
+    padding-top: 5px; 
+    padding-bottom: 5px;  
+    max-width: 450px;
+    margin-left: 30px;
+    margin-bottom: 15px;   
+   }
+   mat-card{
+    background-color: whitesmoke ; 
+    width: 45%;
+    padding-top: 5px; 
+    padding-bottom: 5px;  
+    max-width: 450px;
+    margin-left: 30px;
+    margin-bottom: 15px;
+   }
